--- a/ej4A04.html
+++ b/ej4A04.html
@@ -13,15 +13,15 @@
      arr1[i] = Math.floor((Math.random() * 1000) + 1);
    }
 
-   let mayor = arr1.reduce((a, b) => a > b ? a : b);
-   let menor = arr1.reduce((a, b) => a < b ? a : b);
+   arr1.quitarMenorMayor = function() {
+    let mayor = this.reduce((a, b) => a > b ? a : b);
+    let menor = this.reduce((a, b) => a < b ? a : b);
+    return this.filter((item) => item != mayor && item != menor);
+   }
 
-   let arr2 = arr1.filter((item) => item != mayor && item != menor);
+
+   let arr2 = arr1.quitarMenorMayor();
    
-   console.log(arr1);
-   console.log(mayor);
-   console.log(menor);
-   console.log(arr2);
 
    alert("Original: " + arr1  + "      Modificado: " + arr2);
   </script>
