--- a/evaluables/ej5.html
+++ b/evaluables/ej5.html
@@ -97,7 +97,7 @@
         }
       };
 
-    // J Son funciones que reciben el objeto, no un método del objeto.
+    // J Son funciones que reciben un objeto, no un método del objeto.
     function mostrarPropiedades1(vehiculo) {
       let propiedades = "";
       for (let i in vehiculo) {
